# TraeDocQA

./: PRD.md  README.md  app.py  main.py  pyproject.toml  requirements.txt  test_deepseek.py  test_embedding.py  未来光合AI面试题目.md
src/data/: parser.py
src/database/: vector_store.py
src/llm/: faq_extractor.py  qa_processor.py
src/ui/: chat_page.py  main.py  upload_page.py
src/utils/: config.py
